performance improvments of the Rust version of anim_to_vtk

--- a/output_converters/anim_to_vtk/Cargo.toml
+++ b/output_converters/anim_to_vtk/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "Convert OpenRadioss animation files to legacy VTK format (ASCII or binary)"
 license = "MIT"
+
+[dependencies]
+itoa = "1.0"
+ryu = "1.0"
